# autocorrectionMCQ

./: .gitignore  CMakeLists.txt  capPicture.cpp
answers/: answersA1.csv  answersC2.csv
gabarito/: answers.csv
labels/: labelanswers.py  labels.csv
results/: results.csv
src/: .#automatic-correction.py  .#imageprocessing.py  .#pre_processing.py  autocorrect.py  autocorrection.cpp  automatic-correction.py  capture.py  capture.sh  correction.py  filemanager.py  homografy.cpp  imageprocessing.py  orb.cpp  orb.py  otsu.py  pre_processing.cpp  pre_processing.py  process_gabarito.py  result2.csv  result3.csv  result5.csv  results.csv  test.sh  test2.sh
src/cpp/: autocorrection2.cpp  histogram.cpp
src/include/: imageprocessing.py  otsu.py
src/python/: answers.csv  autocorrection.py  imageprocessing.py  labels.txt  orb.py  pre-processing.py  process_gabarito.py
